fix: 修改readio-gateway，能够正常访问；修复readio-admin中dao对应的resource缺失的问题